@@ -899,24 +899,52 @@ context 'Links' do
     end
   end
 
-  # FIXME this is a negative test; it should be updated when the problem is fixed
-  test 'should output empty square brackets if inter-document xref points to current doc and no link text is provided' do
+  test 'should use doctitle as fallback link text if inter-document xref points to current doc and no link text is provided' do
     input = <<~'EOS'
     = Links & Stuff at https://example.org
 
     See xref:test.adoc[]
     EOS
     output = convert_string_to_embedded input, attributes: { 'docname' => 'test' }
-    assert_include '<a href="#">[]</a>', output
+    assert_include '<a href="#">Links &amp; Stuff at https://example.org</a>', output
   end
 
-  # FIXME this is a negative test; it should be updated when the problem is fixed
-  test 'should output empty square brackets if inter-document xref points to current doc without header and no link text is provided' do
+  test 'should use reftext on document as fallback link text if inter-document xref points to current doc and no link text is provided' do
+    input = <<~'EOS'
+    [reftext="Links and Stuff"]
+    = Links & Stuff
+
+    See xref:test.adoc[]
+    EOS
+    output = convert_string_to_embedded input, attributes: { 'docname' => 'test' }
+    assert_include '<a href="#">Links and Stuff</a>', output
+  end
+
+  test 'should use reftext on document as fallback link text if xref points to empty fragment and no link text is provided' do
+    input = <<~'EOS'
+    [reftext="Links and Stuff"]
+    = Links & Stuff
+
+    See xref:#[]
+    EOS
+    output = convert_string_to_embedded input, attributes: { 'docname' => 'test' }
+    assert_include '<a href="#">Links and Stuff</a>', output
+  end
+
+  test 'should use fallback link text if inter-document xref points to current doc without header and no link text is provided' do
     input = <<~'EOS'
     See xref:test.adoc[]
     EOS
     output = convert_string_to_embedded input, attributes: { 'docname' => 'test' }
-    assert_include '<a href="#">[]</a>', output
+    assert_include '<a href="#">[^top]</a>', output
+  end
+
+  test 'should use fallback link text if fragment of internal xref is empty and no link text is provided' do
+    input = <<~'EOS'
+    See xref:#[]
+    EOS
+    output = convert_string_to_embedded input, attributes: { 'docname' => 'test' }
+    assert_include '<a href="#">[^top]</a>', output
   end
 
   test 'should produce an internal anchor for inter-document xref to file outside of base directory' do
